<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".DetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:paddingBottom="32dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_park_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_park_designation_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview"
                android:textSize="18sp" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/details_viewpager"
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp">

            </androidx.viewpager2.widget.ViewPager2>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/Description"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview" />

            <TextView
                android:id="@+id/Activities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/activities"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activities_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview" />

            <TextView
                android:id="@+id/Topics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/topics"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/topics_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview" />

            <TextView
                android:id="@+id/Entrance_fee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/entrance_fee"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/entrance_fee_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview" />

            <TextView
                android:id="@+id/Operating_Hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/operating_hours"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/operating_hours_description"
                android:layout_width="match_parent"
                android:layout_height="98dp"
                android:text="@string/textview" />

            <TextView
                android:id="@+id/Directions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/directions"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/direction_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>